# live-chat-server

./: .env  Cargo.toml  README.md  render.yaml
src/: main.rs
src/middleware/: compression.rs  cors.rs  mod.rs
src/models/: messages.rs
src/router/chat/: get_room.rs  mod.rs  send_message.rs  tests.rs
src/router/health/: check_health.rs  mod.rs
