[package]
name = "live-chat"
version = "0.1.0"
edition = "2024"
authors = ["DoneDeal0 <talk.donedeal0@gmail.com>"]
description = "live chat server in rust for a hackaton project"
repository = "https://github.com/DoneDeal0/live-chat-server"
license = "Apache-2.0"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] } 
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "compression-gzip"] }
futures-util = "0.3.31" 
serde_json = "1.0.140"
dotenvy = "0.15.7"
axum-macros = "0.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
axum-test = "17.2.0"
tokio-tungstenite = "0.26.2"
